# supafund

./: .gitignore  README.md  package.json  pnpm-lock.yaml
contracts/: .env.example  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: SupaFundEscrow.sol  TEEOracle.sol
contracts/test/: SupaFundEscrow.t.sol
src/app/: globals.css  layout.tsx  page.tsx
src/app/create/: page.tsx
src/app/grant/[id]/: page.tsx
src/app/grants/: page.tsx
src/components/: Navbar.tsx  Providers.tsx
src/config/: contracts.ts  wagmi.ts
teeOracle/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
teeOracle/src/: main.rs
