[package]
name = "supafund-tee-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy = { version = "1", features = ["signers", "signer-local", "sol-types", "eip712"] }
dstack-sdk = "0.1.2"
hex = "0.4"
sha2 = "0.10"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
